--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asttokens==2.0.5
 attrs==21.4.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
+black==22.6.0
 bleach==5.0.1
 blinker==1.4
 cachetools==5.2.0
@@ -40,6 +41,7 @@ jupyterlab-widgets==1.1.1
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
+mypy-extensions==0.4.3
 nbclient==0.6.6
 nbconvert==6.5.0
 nbformat==5.4.0
@@ -50,9 +52,11 @@ packaging==21.3
 pandas==1.4.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
+platformdirs==2.5.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 protobuf==3.20.1
@@ -68,6 +72,7 @@ Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==23.2.0
@@ -75,14 +80,17 @@ requests==2.28.1
 rich==12.5.1
 semver==2.13.0
 Send2Trash==1.8.0
+simplejson==3.17.6
 six==1.16.0
 smmap==5.0.0
 soupsieve==2.3.2.post1
 stack-data==0.3.0
 streamlit==1.11.0
+streamlit-aggrid==0.2.3.post2
 terminado==0.15.0
 tinycss2==1.1.1
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.2
 traitlets==5.3.0
