--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ commonmark==0.9.1
 debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
+deta==1.1.0
 dnspython==2.2.1
 entrypoints==0.4
 executing==0.8.3
