--- a/requirements.txt
+++ b/requirements.txt
@@ -100,6 +100,7 @@ tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.10
 validators==0.20.0
+watchdog==2.1.9
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.1
